# Regulars__and_finite_automatons

./: CMakeLists.txt  DFA_regular_converter.cpp  DFA_regular_converter.h  Makefile  NKA.cpp  NKA.h  README.md  constants.h  main.cpp  tests.cpp
